build: corrigindo execução do projeto

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
-<?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools"
+    package="com.example.mobilevan">
 
     <application
         android:allowBackup="true"
@@ -12,11 +12,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.MobileVan"
         tools:targetApi="31">
-        <activity
-            android:name=".ui.navigation.MainActivity"
-            android:exported="false"
-            android:label="@string/title_activity_main"
-            android:theme="@style/Theme.MobileVan" />
+
         <activity
             android:name=".MainActivity"
             android:exported="true"
@@ -24,10 +20,8 @@
             android:theme="@style/Theme.MobileVan">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
     </application>
-
 </manifest>
